added sticky header

--- a/css/style-dark.css
+++ b/css/style-dark.css
@@ -20,12 +20,23 @@
   }
 
   header {
+    background: #111;
     font-family: 'Space Mono', monospace;
     font-size: 1.6rem;
     font-style: italic;
+    height: 89.02px;
     margin: 0 auto;
     padding-top: 2rem;
+    padding-bottom: 1rem;
+    position: fixed;
+    top: 0;
+    transition: top 0.2s ease-in-out;
     width: 100%;
+    z-index: 1;
+  }
+
+  .nav-up {
+    top: -89.02px;
   }
 
   .logo-visible {
@@ -113,7 +124,7 @@
     font-size: 2.1rem;
     font-weight: 400;
     line-height: 1.7em;
-    padding-top: 16rem;
+    padding-top: 18rem;
   }
 
   .hero-italic {
@@ -327,7 +338,7 @@
 
   .about-image-mobile {
     display: block;
-    margin-top: 10rem;
+    margin-top: 12rem;
     width: 100%;
   }
 
@@ -379,7 +390,7 @@
   .canopy-hero h1 {
     font-size: 2.8rem;
     font-weight: bold;
-    padding: 10rem 0 1rem 0;
+    padding: 12rem 0 1rem 0;
     text-align: center;
   }
 
@@ -867,7 +878,7 @@
 
   .form-header {
     font-size: 2.8rem;
-    padding: 10rem 0 5rem 0;
+    padding: 12rem 0 5rem 0;
     text-align: center;
   }
 
@@ -969,7 +980,7 @@
 
         h1 {
           font-size: 2.8rem;
-          padding-top: 16rem;
+          padding-top: 19rem;
         }
 
         #carousel h3 {
@@ -981,6 +992,13 @@
         }
 
       /* "About" styling*/
+
+        .about-image-mobile {
+          display: block;
+          margin-top: 13rem;
+          width: 100%;
+        }
+
         .about-me h1 {
           font-size: 3.2em;
           padding: 4rem 0 2rem 0;
@@ -993,6 +1011,10 @@
 
 
       /* "canopy" styling*/
+
+        .canopy-hero h1 {
+          padding: 13rem 0 1rem 0;
+        }
 
         .mobile-slider {
           display: none;
@@ -1029,6 +1051,10 @@
           width: 100%;
         }
 
+        .form-header {
+          padding: 13rem 0 5rem 0;
+        }
+
       }
 
 
@@ -1041,9 +1067,6 @@
           width: 75%;
         }
 
-        header li {
-          margin-left: 10rem;
-        }
 
         .logos:hover .logo-visible {
           display: none
@@ -1055,6 +1078,14 @@
           width: 6rem;
         }
 
+        header {
+          font-family: 'Space Mono', monospace;
+          font-size: 1.8rem;
+          height: 109.02px;
+          padding-top: 3rem;
+          padding-bottom: 2rem
+        }
+
 
 
 
@@ -1063,7 +1094,7 @@
 
         h1 {
           font-size: 3.2rem;
-          padding-top: 22rem;
+          padding-top: 25rem;
         }
 
         #carousel h3 {
@@ -1103,7 +1134,7 @@
       .canopy-hero h1 {
         font-size: 4.2rem;
         font-weight: bold;
-        padding: 10rem 0 1rem 0;
+        padding: 13rem 0 1rem 0;
         text-align: center;
       }
 
@@ -1434,7 +1465,7 @@
 
       .form-header {
         font-size: 3.6rem;
-        padding: 14rem 0 5rem 0;
+        padding: 17rem 0 5rem 0;
         text-align: center;
       }
 
@@ -1473,7 +1504,7 @@
     @media only screen and (min-width: 1199px) {
 
       .hero h1 {
-        padding-top: 30rem;
+        padding-top: 24rem;
       }
 
 
@@ -1505,7 +1536,7 @@
       }
 
       .about-me {
-        margin-top: 15rem;
+        margin-top: 18rem;
         width: 100%;
       }
 
@@ -1538,7 +1569,7 @@
 
       .form-header {
         font-size: 3.6rem;
-        padding: 10rem 0 5rem 0;
+        padding: 13rem 0 5rem 0;
         text-align: center;
       }
 
@@ -1554,9 +1585,9 @@
 
       /* Index styling*/
 
-        h1 {
+        .hero h1 {
           font-size: 3.6rem;
-          padding-top: 30rem;
+          padding-top: 34rem;
           padding-bottom: 10rem;
         }
 
@@ -1581,7 +1612,7 @@
       /* Index styling*/
 
         h1 {
-          padding-top: 30rem;
+          padding-top: 34rem;
           padding-bottom: 15rem;
         }
 
