--- a/css/style-dark.css
+++ b/css/style-dark.css
@@ -878,7 +878,13 @@
 
   .form-header {
     font-size: 2.8rem;
-    padding: 12rem 0 5rem 0;
+    padding: 12rem 0 0 0;
+    text-align: center;
+  }
+
+  .form-email {
+    font-size: 1.6rem;
+    padding: 1rem 0 5rem 0;
     text-align: center;
   }
 
@@ -1052,7 +1058,11 @@
         }
 
         .form-header {
-          padding: 13rem 0 5rem 0;
+          padding: 13rem 0 0 0;
+        }
+
+        .form-email {
+          padding-top: 2rem;
         }
 
       }
@@ -1465,8 +1475,12 @@
 
       .form-header {
         font-size: 3.6rem;
-        padding: 17rem 0 5rem 0;
+        padding: 17rem 0 0 0;
         text-align: center;
+      }
+
+      .form-email {
+        font-size: 2rem;
       }
 
       form {
@@ -1569,8 +1583,12 @@
 
       .form-header {
         font-size: 3.6rem;
-        padding: 13rem 0 5rem 0;
+        padding: 13rem 0 0 0;
         text-align: center;
+      }
+
+      .form-email {
+        padding-bottom: 7rem;
       }
 
       }
