--- a/css/style-dark.css
+++ b/css/style-dark.css
@@ -394,6 +394,10 @@
     text-align: center;
   }
 
+  .construction {
+    padding-top: 20rem;
+  }
+
   .canopy-hero h2 {
     font-family: 'roc-grotesk', sans-serif;
     font-size: 1.6rem;
@@ -1518,7 +1522,7 @@
     @media only screen and (min-width: 1199px) {
 
       .hero h1 {
-        padding-top: 24rem;
+        padding-top: 32rem;
       }
 
 
