--- a/css/style-dark.css
+++ b/css/style-dark.css
@@ -325,6 +325,18 @@
     padding-bottom: 1rem;
   }
 
+  .join-team {
+    font-family: 'roc-grotesk', sans-serif;
+    font-size: 1.6rem;
+    font-weight: 400;
+    line-height: 1.5;
+    padding-bottom: 4rem;
+  }
+
+  .join-team span {
+    font-weight: bold;
+  }
+
   .about-text span {
   font-weight: bold;
   }
@@ -1100,6 +1112,12 @@
           padding-bottom: 2rem
         }
 
+        .join-team {
+          font-size: 2rem;
+          padding: 4rem 0rem 0rem 0rem;
+        }
+
+
 
 
 
@@ -1605,6 +1623,11 @@
         width: 70%;
       }
 
+      .join-team {
+        font-size: 2.4rem;
+        padding: 4rem 16rem 0rem 16rem;
+      }
+
       /* Index styling*/
 
         .hero h1 {
@@ -1623,6 +1646,7 @@
         .canopy-hero h2 {
           width: 45%;
         }
+
 
     }
 
