--- a/css/style.css
+++ b/css/style.css
@@ -324,6 +324,18 @@
     padding-bottom: 1rem;
   }
 
+  .join-team {
+    font-family: 'roc-grotesk', sans-serif;
+    font-size: 1.6rem;
+    font-weight: 400;
+    line-height: 1.5;
+    padding-bottom: 4rem;
+  }
+
+  .join-team span {
+    font-weight: bold;
+  }
+
 
 
 
@@ -1103,6 +1115,11 @@
           padding-bottom: 2rem
         }
 
+        .join-team {
+          font-size: 2rem;
+          padding: 4rem 0rem 0rem 0rem;
+        }
+
 
 
 
@@ -1610,6 +1627,11 @@
 
       .container {
         width: 70%;
+      }
+
+      .join-team {
+        font-size: 2.4rem;
+        padding: 4rem 16rem 0rem 16rem;
       }
 
       /* Index styling*/
